--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "npm-run-all": "^4.1.5",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
